--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
 
     <div class="container">
          <h1>Password Generator</h1>
+        
 
-    <div class="password_container">
-        <h2>Generate a Password</h2>
-        <br />
-        <input type="text" id="password-screen">
-        <br />
-        <button onclick="generate()">Generator Password</button>
-        <button onclick="">Copy to Clipboard</button>
-        <br />
+         <div class="password_container">
+            <h2>Generate a Password</h2>
+            <br />
+            <input type="text" id="password-screen">
+            <br />
+            <button class= "generate" onclick="generate()">Generator Password</button>
+            <button onclick="copy_password()">Copy to Clipboard</button>
+            <br />
+        </div>  
+
+
     </div>
+
 
     <script src="script.js"></script>
 
